amend - 1470bed260-0acb1470edebac14752acbdb156-52b1470hafb208-104c156-104c147156g364-208e312-0a260-104c208-104cc147104befbba147312dffeda147156efeaaa

--- a/views/board.haml
+++ b/views/board.haml
@@ -13,7 +13,7 @@
 
             #middle.column.ib
                 .b.h
-                    %h3= "Posts tagged with #{@name}" 
+                    %h3= "Posts tagged for #{@name}" 
                     %br/
                     %p
                         %hr{width:"50%"}/
