--- a/views/home.haml
+++ b/views/home.haml
@@ -6,11 +6,11 @@
 
     %center
         #main.r8.b.clearfix
-            #left.column.ib
+            #left.column
                 .b.h
                     = haml(:'users/_info')
 
-            #middle.column.ib
+            #middle.column
                 .b.h
                     %h3 My Feed
                     %br/
@@ -30,7 +30,7 @@
                         %hr{width:"20%"}/
                     %p EOL
             
-            #right.column.ib
+            #right.column
                 .b.h
                     %h3 My Tags
                     %br/
