--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -46,7 +46,23 @@ body{background-color:$lt-blu;}
                 }
             }
         }
-    }
+    }/*@media screen and (max-device-width : 499px) {
+        ul{left:5px;
+            li{display:inline-block;list-style:none;margin:0 0.4em;
+                a{display:inline-block;font-size:10pt;border-radius:2px;border-bottom:0;border-top:0;margin:0;padding:0.3em 0.3em 0 0.3em;background-color:$bl-red;}
+                .my{display:none;}
+                .all_my{font-size:11pt;display:inline-block;position:absolute;left:-1.8em;top:0.2em;color:#ddd;}
+                a.icon{display:inline-block;position:relative;top:-0.1em;
+                    img{width:1.8em;height:1.8em;position:relative;top:0;}
+                }
+                &.login{float:right;margin-right:1em;
+//                    center{display:inline;}
+                    a.wrd{display:none;}
+                }
+            }
+        }
+    }*/
+    
     @media screen and (min-width : 500px) {
         ul{left:-10px;
             li{display:inline-block;list-style:none;margin:0 3px;padding:0;
@@ -57,22 +73,40 @@ body{background-color:$lt-blu;}
                 &.login{float:right;margin-right:1em;}
             }
         }
-    }
+    }/*@media screen and (min-device-width : 500px) {
+        ul{left:-10px;
+            li{display:inline-block;list-style:none;margin:0 3px;padding:0;
+                a{font-size:12pt;border-radius:4px;margin:0 0.2em;padding:0.2em;}
+                .my{display:inline;}
+                .all_my{display:none;}
+                .log_my{display:none;}
+                &.login{float:right;margin-right:1em;}
+            }
+        }
+    }*/
 }
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
 	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;}
-    #main{}
+    #main{border:1px dotted yellow;}
     ul{list-style:none;}
 
-	@media screen and (max-width : 499px) {
+    @media screen and (max-width : 499px) {
         #left{display:block;
             h3{float:left;}
             .user_image{float:left;}
             .box{padding:2px;margin:1px;border:1px dotted $tr-br-blu;}
             pre{text-align:left;}
         }
-    }
+    }/*@media screen and (max-device-width : 499px) {
+        #left{display:block;
+            h3{float:left;}
+            .user_image{float:left;}
+            .box{padding:2px;margin:1px;border:1px dotted $tr-br-blu;}
+            pre{text-align:left;}
+        }
+    }*/
+    
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #left{float:left;width:19%;display:inline-block;
             h3{float:left;}
@@ -80,7 +114,15 @@ body{background-color:$lt-blu;}
             .box{padding:2px;margin:1px;border:1px dashed $tr-br-blu;}
             pre{text-align:left;}
         }
-    }
+    }/*@media screen and (min-device-width : 500px) and (max-device-width : 760px) {
+        #left{float:left;width:19%;display:inline-block;
+            h3{float:left;}
+            .user_image{float:left;}
+            .box{padding:2px;margin:1px;border:1px dashed $tr-br-blu;}
+            pre{text-align:left;}
+        }
+    }*/
+
     @media screen and (min-width : 761px) {
         #left{float:left;width:12%;margin-left:8px;display:inline-block;
             h3{float:left;}
@@ -88,29 +130,54 @@ body{background-color:$lt-blu;}
             .box{padding:2px;margin:1px;border:1px solid $tr-br-blu;}
             pre{text-align:left;}
         }        
-    }
+    }/*@media screen and (min-device-width : 761px) {
+        #left{float:left;width:12%;margin-left:8px;display:inline-block;
+            h3{float:left;}
+            .user_image{float:left;}
+            .box{padding:2px;margin:1px;border:1px solid $tr-br-blu;}
+            pre{text-align:left;}
+        }        
+    }*/
+
 
 
     @media screen and (max-width : 499px) {
         #middle{display:block;}
-    }
+    }/*@media screen and (max-device-width : 499px) {
+        #middle{display:block;}
+    }*/
+
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #middle{width:70%;float:right;display:inline-block;}
-    }
-    @media screen and (min-width : 761px) {
-        #middle{width:60%;display:inline-block;}
-    }
+    }/*@media screen and (min-device-width : 500px) and (max-devicewidth : 760px) {
+        #middle{width:70%;float:right;display:inline-block;}
+    }*/
     
-
+    @media screen and (min-width : 761px) {
+        #middle{width:60%;display:inline-block;margin-left:auto;margin-right:auto;}
+    }/*@media screen and (min-device-width : 761px) {
+        #middle{width:60%;display:inline-block;}
+    }*/
+    
+    
+    
     @media screen and (max-width : 499px) {
         #right{display:block;}
-    }
+    }/*@media screen and (max-device-width : 499px) {
+        #right{display:block;}
+    }*/
+    
     @media screen and (min-width : 500px) and (max-width : 760px) {
         #right{float:left;width:19%;display:inline-block;}
-    }
+    }/*@media screen and (min-device-width : 500px) and (max-device-width : 760px) {
+        #right{float:left;width:19%;display:inline-block;}
+    }*/
+    
     @media screen and (min-width : 761px) {
         #right{display:inline-block;float:right;width:12%;margin-right:8px;}
-    }
+    }/*@media screen and (min-device-width : 761px) {
+        #right{display:inline-block;float:right;width:12%;margin-right:8px;}
+    }*/
     
 }
 
