amend - 00a175-75ddbdb00ffebdb00eaedcc075hbedb75-0a0100hec125-0a100-50c75-50c050b175-75d150-50c125-50c100-0ac050abebcc00edeeac

--- a/views/home.haml
+++ b/views/home.haml
@@ -47,8 +47,8 @@
                             %p you have no tags yet
                         - else
                             - @tags.each do |tag|
-                                - %li 
-                                    - %a.pjax{:href => "#{tag[:name]}"}= "#{tag[:name]}"
+                                %li 
+                                    %a.pjax{:href => "../#{tag[:name]}"}= "#{tag[:name]}"
 
 
 = haml(:'partials/_footer', :layout => false)
