amend - 90ecfe180-0ac90dcabcc990cgbecc90dbddc135-90c945hbd225-45b180-90c135-0a945c315-270g270-135d225-0a180-45bc990fbbccc9225haddcb

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -88,7 +88,7 @@ body{background-color:$lt-blu;}
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
 	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;}
-    #main{border:1px dotted yellow;}
+    #main{}
     ul{list-style:none;}
 
     @media screen and (max-width : 499px) {
