amend - 690fde65-26ccc690adfbba6926dbada39-26c6913hffb52-13b39-0a6952bf78-0a65-39d52-39d39-26c6939104-13b91-26cceac690dfcaca690egfaac

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -87,7 +87,7 @@ body{background-color:$lt-blu;}
 }
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
-	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;}
+	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;border-radius:2em;}
     #main{}
     ul{list-style:none;}
 
