amend - 1110gcc145-87ddb1110bafacb11158gbddb87-29b11187edc145-87d116-58c87-29b1110h203-87d174-116e145-87d116-87db111145gcfcab11129bfcaac11187dabbbc

--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -87,9 +87,10 @@ body{background-color:$lt-blu;}
 }
 
 #main-container{position:relative;top:$top-space+50px;padding-bottom:$top-space;
-	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;border-radius:2em;}
+	.column{vertical-align:top;margin-bottom:8px;height:100%;background-color:$tr-blu;padding:1em;border-radius:1em;}
     #main{}
     ul{list-style:none;}
+    .feed_item{background-color:$tr-blu;}
 
     @media screen and (max-width : 499px) {
         #left{display:block;
