--- a/views/home.haml
+++ b/views/home.haml
@@ -35,7 +35,7 @@
             
             #right.column
                 .b.h
-                    %h3 My Tags
+                    %h3 My Net
                     %br/
                     %form.ib{:name => "tag_form", :action => "/#{@user[:name]}/tag", :method => "post"}
                         %fieldset{style: "padding:0.2em 0.8em;"}
