--- a/views/home.haml
+++ b/views/home.haml
@@ -10,8 +10,8 @@
                 .b.h
                     = haml(:'users/_info')
 
-            #middle.column
-                .b.h
+            #middle
+                .b.h.column
                     %h3 My Feed
                     %br/
                     .create_post.ib
