amend - 1470haa200-40bca1470ggccba14780fgedd120-80c14740afe200-0a160-40b120-0a1470f280-40b240-0a200-160e160-40bb14780hgadbc147160cdddbb1470cbcbdb

--- a/views/home.haml
+++ b/views/home.haml
@@ -11,7 +11,7 @@
                     = haml(:'users/_info')
 
             #middle
-                .b.h.column
+                .h.column
                     %h3 My Feed
                     %br/
                     .create_post.ib
