--- a/views/board.haml
+++ b/views/board.haml
@@ -5,14 +5,14 @@
 #main-container.wrapper.clearfix.b{:role => "main"}
 
     %center
-        #main.r8.b
-            #left.column.ib
+        #main.r8.b.clearfix
+            #left.column
                 .b.h
                     = @name
                     %p info info blah blah
 
-            #middle.column.ib
-                .b.h
+            #middle
+                .h.column
                     %h3= "Posts tagged for #{@name}" 
                     %br/
                     %p
@@ -22,7 +22,7 @@
                             .feed_item{style: "border:1px solid black;"}= "asdf#{3 * ( 1 + rand(8) )}"
                     %p EOL
             
-            #right.column.ib
+            #right.column
                 .b.h
                     %h3 Other info
                     %br/
