--- a/views/board.haml
+++ b/views/board.haml
@@ -1,6 +1,6 @@
 = haml(:'partials/_header', :layout => false)
 
--# = haml(:'partials/_nav', :layout => false)
+= haml(:'partials/_nav', :layout => false)
 
 #main-container.wrapper.clearfix.b{:role => "main"}
 
