--- a/views/board.haml
+++ b/views/board.haml
@@ -1,6 +1,7 @@
 = haml(:'partials/_header', :layout => false)
 
-= haml(:'partials/_nav', :layout => false)
+- if @user
+    = haml(:'partials/_nav', :layout => false)
 
 #main-container.wrapper.clearfix.b{:role => "main"}
 
@@ -8,19 +9,36 @@
         #main.r8.b.clearfix
             #left.column
                 .b.h
-                    = @name
-                    %p info info blah blah
+                    .b= @board.name
+                    - if @show
+                        %h3.b Board info:
+                        %p= @board.desc
 
             #middle
                 .h.column
-                    %h3= "Posts tagged for #{@name}" 
+                    %h3= "Posts tagged for #{@board.name}" 
                     %br/
-                    %p
-                        %hr{width:"50%"}/
-                    .feed-container
-                        - 20.times do |i|
-                            .feed_item{style: "border:1px solid black;"}= "asdf#{3 * ( 1 + rand(8) )}"
-                    %p EOL
+                    - if @show
+                        %p
+                            %hr{width:"50%"}/
+                        .feed-container
+                            - 15.times do |i|
+                                .feed_item{style: "border:1px solid black;"}= "asdf#{3 * ( 1 + rand(8) )}"
+                        %p EOL
+                    - if @create
+                        .new_board
+                            %h1 No such board exists yet.
+                            %form.ib{:name => "login_form", :action => "/board/new", :method => "post"}
+                                %fieldset
+                                    %legend You can create it:
+                                    %input{:type => "hidden", :name => "pass", value: "#{session[:pass]}"}/
+                                    %input{:type => "hidden", :name => "user", value: "#{session[:name]}"}/
+                                    %input{:type => "hidden", :name => "board_name", value: "#{@board.name}"}/
+                                    Enter a description:
+                                    %textarea{name: "board_desc", cols: "30", rows: "5", style:"margin:5px;"}
+                                    %input.btn.r4{:type => "submit", :value => "Create!", style:"margin:5px;"}/
+                    - elsif @login
+                        .login_form= haml(:'partials/_login_form', :layout => false)
             
             #right.column
                 .b.h
