--- a/views/partials/_nav.haml
+++ b/views/partials/_nav.haml
@@ -3,7 +3,7 @@
         %li
             %center
                 .all_my My:
-                %a.pjax{:href => "/#{@user[:name]}/home"}
+                %a.home{:href => "/#{@user[:name]}/home"}
                     .my My
                     Net
         %li
@@ -13,12 +13,12 @@
                     Posts
         %li
             %center
-                %a.pjax{:href => "/#{@user[:name]}/tags"}
+                %a.tags{:href => "/#{@user[:name]}/tags"}
                     .my My
                     Tags
         %li
             %center
-                %a.pjax{:href => "/#{@user[:name]}/prefs"} Preferences
+                %a.prefs{:href => "/#{@user[:name]}/prefs"} Preferences
         %li.login
             %center
                 %a{:href => "/logout"}
