amend - 00b238-102dfabb00bafbab00hdddb102-0a034dabb136-102d102-0a00ag204-102d170-102d136-102d102-34b068272-204gbcddc068ecacda0204cgfebc

--- a/views/board.haml
+++ b/views/board.haml
@@ -9,10 +9,15 @@
         #main.r8.b.clearfix
             #left.column
                 .b.h
-                    .b= @board.name
+                    .b
+                        = @board.name
+                        %br/
+                        - if @show && @user
+                            [ADD TO TAGS]
+                            %br/
                     - if @show
                         %h3.b Board info:
-                        %p= @board.desc
+                        %p= @board.bio
 
             #middle
                 .h.column
@@ -22,8 +27,9 @@
                         %p
                             %hr{width:"50%"}/
                         .feed-container
+                            %h1= @posts.length
                             - 15.times do |i|
-                                .feed_item{style: "border:1px solid black;"}= "asdf#{3 * ( 1 + rand(8) )}"
+                                .feed_item{style: "border:1px solid black;margin:2em;"}= "asdf#{3 * ( 1 + rand(8) )}"
                         %p EOL
                     - if @create
                         .new_board
