--- a/views/board.haml
+++ b/views/board.haml
@@ -28,9 +28,9 @@
                             %hr{width:"50%"}/
                         .feed-container
                             %h1= @posts.length
-                            - 15.times do |i|
-                                .feed_item{style: "border:1px solid black;margin:2em;"}= "asdf#{3 * ( 1 + rand(8) )}"
-                        %p EOL
+                            - @posts.each do |p|
+                                .feed_item{style: "border:1px solid black;margin:2em;"}= "#{p.text}"
+
                     - if @create
                         .new_board
                             %h1 No such board exists yet.
