--- a/views/prefs.haml
+++ b/views/prefs.haml
@@ -20,7 +20,7 @@
                 %p{style: "margin-left:1em;"}= @user[:email]
             .pref{style: "margin-left:1em;padding-top:1em;"}
                 %h3 Member since:
-                %p{style: "margin-left:1em;"}= @user[:since]
+                %p{style: "margin-left:1em;"}= @user[:created_at]
             .pref{style: "margin-left:1em;padding-top:1em;"}
                 %h3 
                     Manage:
