--- a/views/board.haml
+++ b/views/board.haml
@@ -31,7 +31,7 @@
                             - @posts.each do |p|
                                 .feed_item{style: "border:1px solid black;margin:2em;"}= "#{p.text}"
 
-                    - if @create
+                    - if @create && !@login
                         .new_board
                             %h1 No such board exists yet.
                             %form.ib{:name => "login_form", :action => "/board/new", :method => "post"}
@@ -43,7 +43,7 @@
                                     Enter a description:
                                     %textarea{name: "board_desc", cols: "30", rows: "5", style:"margin:5px;"}
                                     %input.btn.r4{:type => "submit", :value => "Create!", style:"margin:5px;"}/
-                    - elsif @login
+                    - if @login
                         .login_form= haml(:'partials/_login_form', :layout => false)
             
             #right.column
