amend - 690bfd200-80cbb690ecfaac6980eeced120-80c69120hgfc160-120d120-80c690ha240-40b200-120d160-0a120-40b690cddccc69240adcbcb69160bgdbcc

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -499,7 +499,8 @@ body {
     #main-container #right {
       float: left;
       width: 21%;
-      display: inline-block; } }
+      display: inline-block;
+      clear: left; } }
   @media screen and (min-width : 761px) {
     #main-container #right {
       display: inline-block;
