--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -176,7 +176,7 @@ body{background-color:$lt-blu;}
     }*/
     
     @media screen and (min-width : 500px) and (max-width : 760px) {
-        #right{float:left;width:21%;display:inline-block;}
+        #right{float:left;width:21%;display:inline-block;clear:left;}
     }/*@media screen and (min-device-width : 500px) and (max-device-width : 760px) {
         #right{float:left;width:19%;display:inline-block;}
     }*/
