--- a/public/stylesheets/sass/styles.scss
+++ b/public/stylesheets/sass/styles.scss
@@ -93,6 +93,8 @@ body{background-color:$lt-blu;}
     .feed_item{background-color:$tr-blu;}
     .create_post{width:80%;
         fieldset{background-color:$tr-blu; border-radius:0.5em;}
+        ul{position:relative;left:-2em;}
+        li{float:left;list-style:none;margin:0.3em 1em;text-align:left;width:3.8em;height:2em;background-color:$tr-blu;}
         @media screen and (max-width : 499px) {textarea{width:180px;}}
         @media screen and (min-width : 500px) and (max-width : 760px) {textarea{width:210px;height:60px;}}
         @media screen and (min-width : 761px) and (max-width : 949px) {textarea{width:300px;height:80px;}}
