--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -419,6 +419,17 @@ body {
     #main-container .create_post fieldset {
       background-color: rgba(0, 51, 119, 0.2);
       border-radius: 0.5em; }
+    #main-container .create_post ul {
+      position: relative;
+      left: -2em; }
+    #main-container .create_post li {
+      float: left;
+      list-style: none;
+      margin: 0.3em 1em;
+      text-align: left;
+      width: 3.8em;
+      height: 2em;
+      background-color: rgba(0, 51, 119, 0.2); }
     @media screen and (max-width : 499px) {
       #main-container .create_post textarea {
         width: 180px; } }
